pagina web atualizada 02/08/2022

--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
 </head>
 <body>
-   <h1>Mercado Gostoso</h1>
+ <h1>Mercado Gostoso</h1>
 
-<p>Esta localizado no centro da cidade, e vem em anos e anos crescendo.
-Lugar onde você pode comprar coisas que precisa.
-Tem tudo aqui no MERCADO GOSTOSO, faça seu pedido aqui no app,
- e espere sua compra chegar.
-
+ <p>Ésta localizado no centro da cidade, e <u>vem em anos e anos crescendo</u>, lugar one você possa comprar coisas que precisa. <p>Tem tudo aqui no <B>MERCADO GOSTOSO</B>, faça seu pedido aqui no <i>app</i>, e espera sua compra chega.</p></p>
 </body>
 </html>
