--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel = "stylesheet" href = "style.css">
 </head>
 <body>
  <h1>Mercado Gostoso</h1>
 
- <p>Ésta localizado no centro da cidade, e <u>vem em anos e anos crescendo</u>, lugar one você possa comprar coisas que precisa. <p>Tem tudo aqui no <B>MERCADO GOSTOSO</B>, faça seu pedido aqui no <i>app</i>, e espera sua compra chega.</p></p>
+ <p>Ésta localizado no centro da cidade, e <u>vem em anos e anos crescendo</u>, lugar onde você possa comprar coisas que precisa. <p>Tem tudo aqui no <B>MERCADO GOSTOSO</B>, faça seu pedido aqui no <i>app</i>, e espera sua compra chega.</p></p>
 </body>
 </html>
