--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
  <h1>Mercado Gostoso</h1>
- <img src="zaitt01.jpg"
+ <img src="zaitt01.jpg">
 
  <p>Ésta localizado no centro da cidade, e <u>vem em anos e anos crescendo</u>, lugar onde você possa comprar coisas que precisa. <p>Tem tudo aqui no <B>MERCADO GOSTOSO</B>, faça seu pedido aqui no <i>app</i>, e espera sua compra chega.</p></p>
- <img src="images.jpeg"
+ <img src="images.jpeg">
 </body>
 </html>
